--- a/SmartReader/SmartReader.csproj
+++ b/SmartReader/SmartReader.csproj
@@ -70,6 +70,12 @@
     <Compile Include="obraz.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionSym.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QuestionSym.Designer.cs">
+      <DependentUpon>QuestionSym.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -85,6 +91,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="QuestionSym.resx">
+      <DependentUpon>QuestionSym.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
